<resources>
    <string name="app_name">NuMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="title">Title</string>
    <string name="reason">Reason</string>
    <string name="frequency"><u>Frequency</u></string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="startDate">Start Date (dd/mm/yyyy)</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="habits">Habits</string>
    <string name="eventSeacrh">Event Search</string>
    <string name="map">Map</string>
    <string name="followers">Followers</string>
    <string name="actionSettings">Action Settings</string>
    <string name="edit">Edit</string>
    <string name="addEvent">Add Event</string>
    <string name="back">Back</string>
    <string name="useLocation">Use Location</string>
    <string name="frequencies">Frequencies</string>
    <string name="events">Events:</string>
    <string name="addAnEvent">Add an Event</string>
    <string name="addAHabit">Add a Habit</string>
    <string name="editEvent">Edit Event</string>
    <string name="editHabit">Edit Habit</string>
    <string name="login">Login</string>
    <string name="viewEvent">View Event</string>
    <string name="viewHabit">View Habit</string>
    <string name="createAccount">Create Account</string>
    <string name="username">Username</string>
    <string name="fullName">Full Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="editProfile">Edit Profile</string>
    <string name="newName">New Full Name</string>
    <string name="following">Following</string>
    <string name="searchPeople">Search People</string>
    <string name="follow">Follow</string>
    <string name="mostRecentEvent">Most Recent Event:</string>
    <string name="today">Today</string>
    <string name="showAll">Show All</string>
    <string name="notifications">Notifications</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="habitTitle">Habit Title</string>
    <string name="search">Search</string>
    <string name="viewMap">View Map</string>
    <string name="sevenDays">7 Days</string>
    <string name="stats">Stats</string>
</resources>
