<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_weight="0.14"
        android:fontFamily="@font/pt_sans"
        android:text="@string/title"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.16"
        android:fontFamily="@font/pt_sans"
        android:text="@string/reason"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.14"
        android:fontFamily="@font/pt_sans"
        android:text="@string/startDate"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/frequency"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0.10"
        android:fontFamily="@font/pt_sans"
        android:text="@string/frequencies"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/eventtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_sans"
        android:text="@string/mostRecentEvent"

        android:textSize="24sp"
        android:gravity="center_vertical"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_weight="0.14"
        app:srcCompat="@drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:fontFamily="@font/pt_sans"
        android:text="@string/comment"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:fontFamily="@font/pt_sans"
        android:text="@string/location"
        android:textSize="18sp"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/backbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.14"
        android:background="@drawable/button_custom_pink"
        android:text="@string/back"
        android:fontFamily="@font/pt_sans_bold"
        android:textSize="24sp"/>

</LinearLayout>

