<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/username" />

        <TextView
            android:id="@+id/habittitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/habitTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/date"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date" />
    </LinearLayout>
</LinearLayout>
