<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_weight="0.00"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:layout_weight="0.53"
            android:text="@string/username" />

        <TextView
            android:id="@+id/title"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:text="@string/title" />
    </LinearLayout>

    <TextView
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:text="@string/reason" />

</LinearLayout>
