<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.19"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.05"
        android:fontFamily="@font/pt_sans_italic"
        android:gravity="center_vertical"
        android:text="@string/comment"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/location"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.04"
        android:fontFamily="@font/pt_sans_italic"
        android:gravity="center_vertical"
        android:text="@string/location"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/editbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/pt_sans_bold"
        android:text="@string/edit"
        android:textSize="24sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/deletebutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/pt_sans_bold"
        android:text="@string/delete"
        android:textSize="24sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/backbutton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/pt_sans_bold"
        android:text="@string/back"
        android:textSize="24sp"
        android:typeface="monospace" />

</LinearLayout>
