<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/username" />

        <Button
            android:id="@+id/acceptbutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/accept"
            android:textSize="18sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/declinebutton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorDarkUtility"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/decline"
            android:textSize="18sp"
            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>
