<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_weight="0.00"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.53"
            android:fontFamily="@font/pt_sans_italic"
            android:gravity="center_vertical"

            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:fontFamily="@font/pt_sans_italic"
            android:gravity="center_vertical"

            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.07"
        android:fontFamily="@font/pt_sans_italic"
        android:text="@string/reason"
        android:textSize="18sp"
        android:textStyle="italic" />

</LinearLayout>
